200303080430 5 * Delayed go to standby after running timer event
200303081912 6 * MP3 ID3 Tag improvements... parse on demand
200303100238 3 * Add many funktions to reload settings on run time... ( https://lists.berlios.de/pipermail/tuxbox-cvs/2003-March/010829.html )
200303101819 5 * Add alternative bouquet switching style in service selector ( can be enabled in rc setup ) red -> TV Service, green -> Satellites, yellow DVB-Bouquets, blue -> User bouquets
200303110429 6 * Reenable bouquet + - keys with closed service selector ( https://lists.berlios.de/pipermail/tuxbox-cvs/2003-March/010845.html )
200303141538 7 * Add second plugin directory (/var/tuxbox/plugins)
200303141538 5 * Now timers kann directly added with  - green button for DVR Timer,  - yellow button for NGRAB Timer,  - blue button for switch timer in EPG and eventview
200303141538 7 * Add plugin offset setup dialog ( in osd setup ) ( tuxtxt )
200303150314 5 * On recorded movies "This service could not be descrambled" never more appear on screen
200303150314 3 * Remove bug which prevent pause and play on recorded ts which was recorded  on a scrambles service
200303152100 7 * Now plugins can be started with http://boxip/cgi-bin/startPlugin?path=/bla&name=pluginname.cfg
200303161435 3 * Important timer bugfix
200303170100 5 * Fix PES streaming ( tuxvision and other )
200303170100 7 * Bugfix Internet radio description showing
200303170100 6 6 Add missing mkreiserfs
200303211951 5 56 Add new Colorformat YPbPr ( for beamers )
200304040020 7 * Add possibility to display remaining time in infobar
200304050000 7 * Add many testscreens
200304090124 2 * Add Timeshift
200304131503 4 * Redesign Timer .. for repeated Events
200304131503 5 * Add support to select subservices in Timer (when exist)
200304131503 4 * Add support to edit satellites.xml ( transponders for scan )
200304131503 5 * Add support to lock setup with a PIN ( parental locking follows... )
200304172159 5 * Don't change voltage on PIN8 in Standby